fixed spacing

--- a/app/assets/stylesheets/components/_searchbar.scss
+++ b/app/assets/stylesheets/components/_searchbar.scss
@@ -1,6 +1,6 @@
 .form-inline {
     justify-content: center;
-    padding-top: 20px;
+    padding-top: 30px;
     padding-bottom: 20px;;
 }
 
